# sergey

./: .gitignore
2_sem/ex1/: compille.sh  gtest.sh  run.sh
2_sem/ex1/project/LongNumber/src/: longnumber.hpp
2_sem/ex1/project/menu/: main.cpp
2_sem/ex1/project/sort/: CMakeLists.txt
2_sem/ex1/project/sort/tests/: CMakeLists.txt  test.cpp
2_sem/ex1/src/: CMakeLists.txt
2_sem/ex1/src/menu/: CMakeLists.txt
2_sem/ex1/src/sort/: CMakeLists.txt  main.cpp
2_sem/ex1/src/sort/tests/: CMakeLists.txt
2_sem/ex2/project/LongNumber/: main.cpp
ex4/: menu_func.cpp
